--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL = http://3.83.223.18:8180/
+REACT_APP_BACKEND_URL = http://localhost:8180/
 
 aws ip : http://3.83.223.18:8180/
 
